# VideoPlayer

./: .gitignore  AudioDecodeThread.cpp  AudioDecodeThread.h  AudioPlayThread.cpp  AudioPlayThread.h  AudioPlayer.cpp  AudioPlayer.h  AudioResample.cpp  AudioResample.h  BaseThread.cpp  BaseThread.h  CMakeLists.txt  CustomOpenGLWidget.cpp  CustomOpenGLWidget.h  CustomProgressBar.cpp  CustomProgressBar.h  CustomScreen.cpp  CustomScreen.h  DemuxThread.cpp  DemuxThread.h  FileAnalyse.cpp  InfoDialog.cpp  InfoDialog.h  InfoDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Player.cpp  Player.h  PlayerContext.cpp  PlayerContext.h  README.md  TODO.txt  Utils.cpp  Utils.h  VideoDecodeThread.cpp  VideoDecodeThread.h  VideoPlayThread.cpp  VideoPlayThread.h  res.qrc  (+2 more)
app/: AdjustDialog.cpp  AdjustDialog.h  AdjustDialog.ui  AudioDecodeThread.cpp  AudioDecodeThread.h  AudioPlayThread.cpp  AudioPlayThread.h  CustomOpenGLWidget.cpp  CustomOpenGLWidget.h  CustomProgressBar.cpp  FileAnalyse.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PlayerContext.cpp  PlayerContext.h  Utils.cpp  Utils.h  VideoDecodeThread.h  VideoPlayThread.h  res.qrc
build-app-Desktop_Qt6_6_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-app-Desktop_Qt6_6_1_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-ab997a63695125325022.json  index-2024-05-18T15-45-58-0418.json  target-VideoPlayer-Debug-b2ea117d54c55383a9b1.json
build-app-Desktop_Qt6_6_1_MSVC2019_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-77c42953d068faf3cdfe.json  codemodel-v2-475dfc92a029e54cff30.json  directory-.-Debug-9fb3651758b5643f6535.json  target-VideoPlayer_autogen-Debug-d4e591194f7588d47c32.json  target-VideoPlayer_autogen_timestamp_deps-Debug-b45ea1a55eb63bc9437a.json
build-app-Desktop_Qt6_6_1_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
build-app-Desktop_Qt6_6_1_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-app-Desktop_Qt6_6_1_MSVC2019_64bit-Debug/.qtc_clangd/.cache/clangd/index/: AdjustDialog.cpp.A7687BCE53AA3F04.idx  AdjustDialog.h.E11E3DC784579718.idx  AudioDecodeThread.cpp.360CC0E99ACF0CEE.idx  AudioDecodeThread.h.C29512BC2A7C4121.idx  AudioPlayThread.cpp.3D08631195DCC0E2.idx  AudioPlayThread.h.B355A13BE80AF207.idx  AudioResample.cpp.C82DC7C0AF602FC2.idx  AudioResample.h.C93E7F699D956B07.idx  BaseThread.cpp.737A3A14FAF4241D.idx  BaseThread.h.EF6772585BA4D433.idx  CustomOpenGLWidget.cpp.E1A5137DD41B0817.idx  CustomOpenGLWidget.h.C0AB42922FD5FE94.idx  CustomProgressBar.cpp.3D5DAB45001F6E90.idx  CustomProgressBar.h.EDEDE8C487ADD3FC.idx  CustomScreen.cpp.910E629D723064E3.idx  CustomScreen.h.66DD08335822C6BC.idx  DemuxThread.cpp.C4323AFC03CFBB03.idx  DemuxThread.h.0A8B2E4D5AD03D18.idx  FileAnalyse.cpp.FE81BEED6B760189.idx  FileAnalyse.h.714F2ABA51E502C5.idx  InfoDialog.cpp.E59317BBE30AC068.idx  (+660 more)
build-app-Desktop_Qt6_6_1_MSVC2019_64bit-Debug/VideoPlayer_autogen/: deps  mocs_compilation.cpp
build-app-Desktop_Qt6_6_1_MSVC2019_64bit-Debug/VideoPlayer_autogen/EWIEGA46WW/: moc_AdjustDialog.cpp.d  moc_CustomOpenGLWidget.cpp.d  moc_CustomProgressBar.cpp.d  moc_CustomScreen.cpp.d  moc_InfoDialog.cpp.d  moc_MainWindow.cpp.d  moc_VideoPlayThread.cpp.d
